Добавлятет адаптивность хедера

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
           transform: scale(1.1);
 }
 
-.container, .page-header, .container-footer {
+.container, .container-footer {
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -94,18 +94,6 @@ img {
 
 .logo__accent {
   color: #000000;
-}
-
-@media screen and (min-width: 768px) {
-  .page-header__logo {
-    margin-right: 81px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header__logo {
-    margin-right: 85px;
-  }
 }
 
 .address-box__logo {
@@ -258,16 +246,21 @@ img {
   fill: #ffffff;
 }
 
-.container {
+.section {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    padding-top: 60px;
-    padding-bottom: 60px;
   }
 }
 
@@ -280,8 +273,6 @@ img {
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -300,24 +291,6 @@ img {
 }
 
 @media screen and (min-width: 480px) {
-  .page-header {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .page-header {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header {
-    width: 1200px;
-  }
-}
-
-@media screen and (min-width: 480px) {
   .container-footer {
     width: 480px;
   }
@@ -333,6 +306,237 @@ img {
   .container-footer {
     width: 1200px;
   }
+}
+
+.page-header {
+  position: relative;
+  border-bottom: 1px solid #ececec;
+}
+
+.page-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 60px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .page-nav {
+    min-height: 80px;
+  }
+}
+
+.menu-container {
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  background-color: #ffffff;
+}
+
+.menu-container.is-open {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 101%;
+    left: 0;
+    width: 100%;
+    z-index: 9;
+    min-height: 393px;
+    padding: 60px 0 60px 0;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-preferred-size: 507px;
+        flex-basis: 507px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-container {
+    -ms-flex-preferred-size: 935px;
+        flex-basis: 935px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page-nav__list {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.site-nav__item {
+  position: relative;
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav__item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .site-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.site-nav__item--active {
+  display: inline-block;
+}
+
+.site-nav__item--active::after {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  background: #2196f3;
+  border-radius: 2px;
+}
+
+@media screen and (min-width: 767px) {
+  .site-nav__link {
+    padding: 32px 0 32px 0;
+  }
+}
+
+.site-nav__link:hover, .site-nav__link:focus {
+  color: #2196f3;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.site-nav__link--active {
+  position: relative;
+  top: -5px;
+  color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts-list__item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contacts-list__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list__item {
+    text-align: start;
+  }
+}
+
+.contacts-list__link {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #757575;
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-list__link:hover, .contacts-list__link:focus {
+  color: #2196f3;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.contacts-list__icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: lime;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
 }
 
 .hero {
