--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,12 +1,18 @@
-.container {
-  @extend %container;
+.section {
   padding-top: 60px;
   padding-bottom: 60px;
 
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
+.container {
+  @extend %container;
+
   @media screen and (min-width: 480px) {
     width: 480px;
-    padding-top: 60px;
-    padding-bottom: 60px;
   }
 
   @media screen and (min-width: 768px) {
@@ -15,8 +21,6 @@
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    padding-top: 94px;
-    padding-bottom: 94px;
   }
 }
 
@@ -29,22 +33,6 @@
   @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
     font-size: 36px;
-  }
-}
-
-.page-header {
-  @extend %container;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
   }
 }
 
