--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,15 +15,15 @@
   color: $blackColor;
 }
 
-.page-header__logo {
-  @media screen and (min-width: 768px) {
-    margin-right: 81px;
-  }
+// .page-header__logo {
+//   @media screen and (min-width: 768px) {
+//     margin-right: 81px;
+//   }
 
-  @media screen and (min-width: 1200px) {
-    margin-right: 85px;
-  }
-}
+//   @media screen and (min-width: 1200px) {
+//     margin-right: 85px;
+//   }
+// }
 
 .address-box__logo {
   margin-bottom: 40px;
