--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -15,20 +15,9 @@
   color: $blackColor;
 }
 
-// .page-header__logo {
-//   @media screen and (min-width: 768px) {
-//     margin-right: 81px;
-//   }
-
-//   @media screen and (min-width: 1200px) {
-//     margin-right: 85px;
-//   }
+// .address-box__logo {
+//   // display: flex;
 // }
-
-.address-box__logo {
-  margin-bottom: 40px;
-  // display: flex;
-}
 
 .logo__accent--invers {
   color: $primaryWhiteColor;
