--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,6 @@
 @import './components/occupation';
 @import './components/developers';
 @import './components/clients';
-@import './components/footer';
 @import './components/address-box';
+@import './components/page-footer';
 @import './components/modal';
