--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -31,5 +31,5 @@
 // %footer-box {
 //   // display: flex;
 //   // flex-direction: column;
-//   text-align: start;
+//   // text-align: start;
 // }
