--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -8,5 +8,5 @@
 @import './components/page-header';
 @import './components/menu-button';
 @import './components/portfolio';
-@import './components/footer';
 @import './components/address-box';
+@import './components/page-footer';
