--- a/sass/components/_address-box.scss
+++ b/sass/components/_address-box.scss
@@ -1,6 +1,12 @@
 .address-box {
   margin-bottom: 60px;
   // width: 25%;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
 }
 
 .wrapper__logo {
