--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -52,12 +52,8 @@
 
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    display: flex;
+    align-items: baseline;
+    padding: 48px 15px 28px 15px;
   }
-
-  // display: flex;
-  //   align-items: baseline;
-  //   padding-top: 60px;
-  //   padding-bottom: 60px;
-
-  // padding: 48px 15px 28px 15px;
 }
