--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,25 +2,23 @@ footer {
   background: #2f303a;
 }
 
-// .connection-box {
-//   @extend %footer-box;
-//   margin-left: auto;
-//   margin-right: auto;
-//   text-align: center;
-//   // width: 25%;
-// }
+.tablets-box {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: baseline;
+  }
+}
+.connection-box {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+}
 
 .connection-box__social {
   margin-bottom: 60px;
 }
-
-// .subscribe-box {
-//   @extend %footer-box;
-//   margin-left: auto;
-//   margin-right: auto;
-//   text-align: center;
-//   // width: 50%;
-// }
 
 .subscribe-box__title,
 .connection-box__title {
@@ -34,12 +32,13 @@ footer {
   color: $primaryWhiteColor;
 }
 
-// .subscribe-box__form {
-//     // display: flex;
-// }
-
+.subscribe-box__form {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
+}
 .subscribe-box__input {
-  display: block;
+  // display: block;
 
   //   width: 358px;
   width: 100%;
@@ -52,6 +51,13 @@ footer {
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  @media screen and (min-width: 768px) {
+    display: block;
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 
   &::placeholder {
     font-size: 16px;
