--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,14 @@ img {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+@media screen and (min-width: 1200px) {
+  .button--theme_footer {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+}
+
 .sub-btn {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -798,10 +806,6 @@ img {
   fill: currentColor;
 }
 
-.address-box {
-  margin-bottom: 60px;
-}
-
 @media screen and (min-width: 768px) {
   .address-box {
     display: -webkit-box;
@@ -812,6 +816,18 @@ img {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 50%;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .address-box {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .address-box {
+    text-align: start;
   }
 }
 
@@ -862,6 +878,12 @@ footer {
   }
 }
 
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .tablets-box {
+    width: 51.3%;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .connection-box {
     display: -webkit-box;
@@ -875,8 +897,18 @@ footer {
   }
 }
 
-.connection-box__social {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199px) {
+  .connection-box__social {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .connection-box__social {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
 }
 
 .subscribe-box__title,
@@ -890,6 +922,19 @@ footer {
 }
 
 @media screen and (min-width: 1200px) {
+  .subscribe-box__title,
+  .connection-box__title {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-box {
+    width: 48.7%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .subscribe-box__form {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -900,7 +945,6 @@ footer {
 .subscribe-box__input {
   width: 100%;
   height: 50px;
-  margin-bottom: 20px;
   padding: 15px 16px;
   background-color: inherit;
   border-radius: 4px;
@@ -909,12 +953,27 @@ footer {
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscribe-box__input {
     display: block;
     width: 450px;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe-box__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-box__input {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-right: 10px;
   }
 }
 
@@ -955,5 +1014,241 @@ footer {
   font-size: 12px;
   line-height: 2;
   color: rgba(255, 255, 255, 0.4);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 9;
+  opacity: 1;
+  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop--hidden {
+  opacity: 0;
+  pointer-events: none;
+  /* transform: scale(0.5); */
+  /* transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+
+.backdrop--hidden .form {
+  -webkit-transform: translate(-50%, -50%) opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) scale(1.1);
+          transform: translate(-50%, -50%) opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) scale(1.1);
+}
+
+.form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  min-width: 450px;
+  min-height: 609px;
+  padding: 40px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  text-align: center;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 1200px) {
+  .form {
+    min-width: 528px;
+    min-height: 581px;
+  }
+}
+
+.btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: block;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.btn__icon {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  fill: currentColor;
+  color: #000000;
+}
+
+.btn:hover > .btn__icon {
+  color: #2196f3;
+}
+
+.form__title {
+  display: block;
+  margin-bottom: 30px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.5;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__title {
+    line-height: 1.15;
+  }
+}
+
+.form__field {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 28px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+
+.form__input {
+  width: 100%;
+  padding: 12px 18px 12px 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form__input:focus {
+  border: 1px solid #2196f3;
+  outline: 1px solid #2196f3;
+}
+
+.form__lable {
+  position: absolute;
+  top: 50%;
+  left: 42px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form__field:focus-within > .form__lable,
+.form__input:not(:placeholder-shown) + .form__lable {
+  -webkit-transform: translateY(-43px) translateX(-23px);
+          transform: translateY(-43px) translateX(-23px);
+  color: #2196f3;
+}
+
+.form__icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  display: inline-block;
+  fill: currentColor;
+  color: #212121;
+}
+
+.form__input:focus ~ .form__icon {
+  color: #2196f3;
+}
+
+.form__textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  resize: none;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: #757575;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form__textarea:focus {
+  border: 1px solid #2196f3;
+  outline: 1px solid #2196f3;
+}
+
+.form__accept {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 1.17;
+  align-items: center;
+  color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__accept {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.form__checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.form__contract-link {
+  display: inline-block;
+  font-size: 12px;
+  line-height: 1.71;
+  color: #2196f3;
+  text-decoration: underline;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__contract-link {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.form__checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  color: #ffffff;
+  fill: currentColor;
+}
+
+.form__checkbox:checked + .form__checkbox-icon {
+  background-color: #2196f3;
+  border-color: #2196f3;
+  background-image: url("../images/icon-check.svg");
+  background-size: contain;
+  background-origin: border-box;
 }
 /*# sourceMappingURL=main.css.map */
