--- a/sass/components/_address-box.scss
+++ b/sass/components/_address-box.scss
@@ -1,11 +1,16 @@
 .address-box {
-  margin-bottom: 60px;
-  // width: 25%;
-
   @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
     width: 50%;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: start;
   }
 }
 
