--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -14,7 +14,6 @@
 
 .button--theme_footer {
   @extend %button;
-  //   display: flex;
   text-align: center;
   padding: 10px 28px;
 
@@ -25,6 +24,10 @@
   background-color: $accentColor;
   color: $primaryWhiteColor;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  @media screen and (min-width: 1200px) {
+    justify-content: flex-end;
+  }
 }
 
 .sub-btn {
