--- a/css/main.css
+++ b/css/main.css
@@ -1048,11 +1048,8 @@ footer {
   left: 50%;
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
-  min-width: 450px;
-  min-height: 609px;
   padding: 40px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  width: 95%;
   text-align: center;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
@@ -1060,9 +1057,16 @@ footer {
   border-radius: 4px;
 }
 
+@media screen and (min-width: 480px) {
+  .form {
+    width: 450px;
+    min-height: 609px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .form {
-    min-width: 528px;
+    width: 528px;
     min-height: 581px;
   }
 }
