--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -30,13 +30,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-
-  min-width: 450px;
-  min-height: 609px;
   padding: 40px;
-  /* margin-left: auto;
-  margin-right: auto; */
-
+  width: 95%;
   text-align: center;
 
   background-color: $primaryWhiteColor;
@@ -44,8 +39,13 @@
     0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 
+  @media screen and (min-width: 480px) {
+    width: 450px;
+    min-height: 609px;
+  }
+
   @media screen and (min-width: 1200px) {
-    min-width: 528px;
+    width: 528px;
     min-height: 581px;
   }
 }
