--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,16 +5,73 @@
   min-height: 600px;
   margin-left: auto;
   margin-right: auto;
+  background-color: gainsboro;
 
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.8),
       rgba(47, 48, 58, 0.8)
     ),
-    url('../images/hero.jpg');
+    url('../images/hero-480.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media (min-resolution: 2dppx) {
+    .overlay {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url('../images/hero-960@2x.jpg');
+    }
+  }
+
+  @media screen and (min-width: 480px) {
+    .overlay {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url('../images/hero-768.jpg');
+    }
+  }
+
+  @media screen and (min-width: 480px) and (min-resolution: 2dppx) {
+    .overlay {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url('../images/hero-1536@2x.jpg');
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .overlay {
+      height: 600px;
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url('../images/hero-1600.jpg');
+    }
+  }
+
+  @media screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+    .overlay {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url('../images/hero-3200@2x.jpg');
+    }
+  }
 
   &-container {
     padding: 118px 0 118px 0;
