--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -11,13 +11,18 @@
   }
 }
 
+.page-header__logo {
+  @media screen and (min-width: 768px) {
+    margin-right: 81px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 85px;
+  }
+}
 .logo__accent {
   color: $blackColor;
 }
-
-// .address-box__logo {
-//   // display: flex;
-// }
 
 .logo__accent--invers {
   color: $primaryWhiteColor;
