--- a/sass/components/_menu-button.scss
+++ b/sass/components/_menu-button.scss
@@ -3,11 +3,29 @@
   margin: 0;
   padding: 0;
   border: none;
-  background-color: lime;
+  background-color: inherit;
 
   @media screen and (min-width: 768px) {
     display: none;
   }
+}
+
+.menu-button:hover .icon-menu {
+  color: $accentColor;
+}
+
+.menu-button:hover .icon-cross {
+  color: $accentColor;
+}
+
+.icon-cross,
+.icon-menu {
+  fill: currentColor;
+  color: $primaryTextColor;
+}
+
+.icon-menu:focus {
+  color: $accentColor;
 }
 
 .menu-button .icon-cross {
